--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-leaflet": "^4.2.1",
-    "react-leaflet-markercluster": "^5.0.0-rc.0",
+    "react-leaflet-markercluster": "^4.0.0",
     "recharts": "^3.0.2",
     "server-only": "^0.0.1",
     "shpjs": "^6.1.0",
