--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@vitejs/plugin-react": "^4.6.0",
     "@vitest/coverage-v8": "^3.2.4",
     "axe-core": "^4.10.3",
+    "critters": "^0.0.23",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
     "jest-axe": "^10.0.0",
